[tool.poetry]
name = "padtransf"
version = "0.1.0"
description = "Padded versions of OpenCV's warping functions."
authors = ["Alexander Reynolds <ar@reynoldsalexander.com>"]
homepage = "https://github.com/alkasm/padded-transformations"
repository = "https://github.com/alkasm/padded-transformations"
keywords = ["cvtools", "computer vision", "cv", "opencv", "warpAffine", "warpPerspective"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
cvtools-alkasm = ">=0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
